Make it able to create and delete MCTs from Stars